--- a/src/main/resources/static/page/admin/layout/layout.html
+++ b/src/main/resources/static/page/admin/layout/layout.html
@@ -38,8 +38,8 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="/admin/welcome">欢迎</a></li>
-                <li><a href="/admin/user">用户管理</a></li>
+                <li id="welcome-sidebar" class="active"><a href="/admin/welcome">欢迎</a></li>
+                <li id="user-sidebar"><a href="/admin/user">用户管理</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -55,5 +55,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="/static/page/admin/layout/layout.js"></script>
 </body>
 </html>
