--- a/src/main/resources/static/page/admin/layout/layout.html
+++ b/src/main/resources/static/page/admin/layout/layout.html
@@ -62,7 +62,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" onclick="">确认</button>
+                <button type="button" class="btn btn-primary" onclick="confirm()">确认</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
