--- a/src/main/resources/static/page/admin/layout/layout.html
+++ b/src/main/resources/static/page/admin/layout/layout.html
@@ -87,6 +87,17 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<!--Loading框-->
+<div id="loading-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div style="width: 80px; height: 80px; text-align: center; position: absolute; left: 50%; top: 50%; margin-left: -40px; margin-top: -40px">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="/static/image/loading.gif">
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
