--- a/src/main/resources/static/page/admin/layout/layout.html
+++ b/src/main/resources/static/page/admin/layout/layout.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/css/dashboard.css" rel="stylesheet">
+    <link href="/static/css/am-pagination.css" rel="stylesheet">
 </head>
 
 <body>
@@ -104,5 +105,6 @@
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="/static/page/admin/layout/layout.js"></script>
+<script src="/static/js/am-pagination.min.js"></script>
 </body>
 </html>
