--- a/src/main/resources/static/page/admin/layout/layout.html
+++ b/src/main/resources/static/page/admin/layout/layout.html
@@ -41,6 +41,7 @@
             <ul class="nav nav-sidebar">
                 <li id="welcome-sidebar" class="active"><a href="/admin/welcome">欢迎</a></li>
                 <li id="user-sidebar"><a href="/admin/user">用户管理</a></li>
+                <li id="category-sidebar"><a href="/admin/category">分类管理</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
