文章内容开发：增加富文本框插件summernote

--- a/src/main/resources/static/page/admin/layout/layout.html
+++ b/src/main/resources/static/page/admin/layout/layout.html
@@ -14,6 +14,8 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="/static/css/dashboard.css" rel="stylesheet">
     <link href="/static/css/am-pagination.css" rel="stylesheet">
@@ -108,5 +110,6 @@
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="/static/page/admin/layout/layout.js"></script>
 <script src="/static/js/am-pagination.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.js"></script>
 </body>
 </html>
